--- a/popup.html
+++ b/popup.html
@@ -29,6 +29,10 @@ input{
     margin: 16px 0 10px 72px;
     border-radius: 12px;
 }
+.dele{
+    height: 16px;
+    margin: 10px 0 0 20px;
+}
 </style>
 </head>
 <body>
@@ -54,7 +58,7 @@ input{
   </div>
   <div>
     <div >
-      <button style="float:right" id="clear" >清除</button>
+      <button style="float:right" id="clear">清除</button>
       <p id="names">
         已替换：
       </p>
